Fix header structure and remove navigation jump effect

--- a/index_html.css
+++ b/index_html.css
@@ -4,7 +4,11 @@ a:active { color:#5C615E; }
 a:hover { color:#B2B3B4; } 
 body { background-color:#0B1020; padding:0;  margin: 0; }
 .textstyle1 { text-align:left; }
-#html_2a63c6c8 { vertical-align: bottom; position:relative; display: inline-block; width:100%; background:none;  }
-#container_1c6e0b8e { vertical-align: top; position:relative; display: inline-block; width:100%; min-height:500px; background:none;  }
-#container_1c6e0b8e_padding { margin: 10px; display: block;  }
-#html_5475a51b { vertical-align: bottom; position:relative; display: inline-block; width:100%; background:none;  }
+#html_3dbc5511 { vertical-align: bottom; position:relative; display: inline-block; width:100%; background-color:#E5E5E5;  }
+#html_26be2b { vertical-align: bottom; position:relative; display: inline-block; width:100%; background:none;  }
+#html_6272362e { vertical-align: bottom; position:relative; display: inline-block; width:100%; background-color:#E5E5E5;  }
+#html_49364a9 { vertical-align: bottom; position:relative; display: inline-block; width:100%; background:none;  }
+#html_54a1c552 { vertical-align: bottom; position:relative; display: inline-block; width:100%; background:none;  }
+#html_25ee779 { vertical-align: bottom; position:relative; display: inline-block; width:100%; background:none;  }
+#html_555429bd { vertical-align: bottom; position:relative; display: inline-block; width:100%; background:none;  }
+#html_144c238e { vertical-align: bottom; position:relative; display: inline-block; width:100%; background-color:#E5E5E5;  }
